--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
       <link rel="stylesheet" href="windi.css">
   </head>
 
-  <body class="bg-gray-100 m-0" style="font-family: Arial, Helvetica, sans-serif">
-    <div class="container flex justify-center m-auto">
-        <div class="content w-100 flex flex-col justify-center text-center items-center">
-            <img class="h-27" src="facebook.svg" alt="facebook">
-            <div class="text font-medium text-2xl text-dark-900 text-transparent bg-gradient-4 bg-clip-text">Facebook helps you connect and</div>
-            <div class="text font-medium text-2xl text-dark-900 text-transparent bg-gradient-4 bg-clip-text">share with people in your life.</div>
-            <div class="w-90 p-4 rounded-[0.5rem] shadow-xl bg-white mt-10 flex flex-col justify-center items-center">
-                <div class="info flex w-[100%] flex-col h-35">
-                    <input class="rounded-[0.4rem] flex-1 mb-3 border-solid border-width-1 border-gray-100 outline-transparent focus:outline-solid-blue-500 placeholder-gray-400 text-[17px] p-1" type="email" name="email" id="email" placeholder="Email address of phone number">
-                    <input class="rounded-[0.4rem] flex-1 mb-3 border-solid border-width-1 border-gray-100 outline-transparent focus:outline-solid-blue-500 placeholder-gray-400 text-[17px] p-1" type="password" name="email" id="password" placeholder="Password">
+  <body class="windi-ctjjmg" style="font-family: Arial, Helvetica, sans-serif">
+    <div class="windi-b9vupk">
+        <div class="windi-3zncx">
+            <img class="windi-b5w3nl" src="facebook.svg" alt="facebook">
+            <div class="windi-1sbfcl4">Facebook helps you connect and</div>
+            <div class="windi-1sbfcl4">share with people in your life.</div>
+            <div class="windi-1d21dmg">
+                <div class="windi-g43qh9">
+                    <input class="windi-1kh0i3s" type="email" name="email" id="email" placeholder="Email address of phone number">
+                    <input class="windi-1kh0i3s" type="password" name="email" id="password" placeholder="Password">
                 </div>
-                <button class="active:bg-blue-600 hover:bg-blue-400 cursor-pointer w-[100%] h-[48px] text-white border-none rounded-[0.4rem] bg-blue-500 font-bold text-[20px] mt-1 mb-3">Log In</button>
-                <a class="text-blue-600 underline-transparent text-[14px] font-medium hover:underline-blue-600" href="#">Forgetten password?</a>
-                <div class="hr w-[100%] h-[2px] bg-gray-200 my-6"></div>
-                <button class="cursor-pointer hover:bg-green-400 active:bg-green-600 w-[50%] h-[48px] text-white border-none rounded-[0.4rem] bg-green-500 font-bold text-[17px] m-auto">Create New Account</button>
+                <button class="windi-6mft45">Log In</button>
+                <a class="windi-1mzj0z9" href="#">Forgetten password?</a>
+                <div class="windi-yynosp"></div>
+                <button class="windi-1ubzpn1">Create New Account</button>
             </div>
-            <div class="text-dark-900 text-[14px] py-10">
-                <a class="font-bold text-dark-900 underline-transparent hover:underline-dark-900" href="#">Create a Page</a>
+            <div class="windi-bm371l">
+                <a class="windi-181x6x4" href="#">Create a Page</a>
                 for a celebrity, brand or business.
             </div>
         </div>
     </div>
-      <footer class="bg-white w-[100%] h-50"></footer>
+      <footer class="windi-kk9l0m"></footer>
   </body>
   </html>
